--- a/ExpressJSSample/package.json
+++ b/ExpressJSSample/package.json
@@ -12,7 +12,7 @@
   },
   
 "scripts": {
-    "start": "forever start main.js",
+    "start": "start main.js",
     "stop": "forever stopall"
 },
   "author": "sreerenjini",
